--- a/app/globals.css
+++ b/app/globals.css
@@ -27,8 +27,6 @@ body {
 } */
 
 canvas {
-  width: 90%;
-  height: 90%;
   background-color: white;
 }
 
@@ -39,4 +37,12 @@ canvas {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
+}
+button {
+  padding: 2px;
+  border: 2px solid green;
+  margin: 5px;
+
+  background-color: aquamarine;
 }
